I took a tums so I feel better

--- a/external-css-gallery/version3/CSS/stylesheet3.css
+++ b/external-css-gallery/version3/CSS/stylesheet3.css
@@ -4,7 +4,7 @@ h1 {
   text-align: center;
   background-color: #ff9b55;
   border: 8px solid #d62900;
-  font-family: Brush Script MT, Brush Script Std, cursive;
+  font-family: 'Macondo Swash Caps';
   font-size: 50px;
   border-radius: 25px 25px 10px 10px;
   color: #c22470;
