--- a/external-css-gallery/version2/CSS/stylesheet2.css
+++ b/external-css-gallery/version2/CSS/stylesheet2.css
@@ -4,6 +4,7 @@ h1 {
   text-align: center;
   font-family: 'Lexend Peta',sans-serif;
   font-size: 50px;
+  padding: 20px;
   border-radius: 25px 25px 10px 10px;
   color: #eae8ef;
   -ms-transform: skewY(175deg); /* IE 9 */
